--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,38 @@
 <resources>
     <string name="app_name">B07 Demo Summer 2024</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="delete_item">Delete Item</string>
-    <string name="add_item">Add Item</string>
-    <string name="back">Back</string>
-    <string name="recyclerview">RecyclerView</string>
-    <string name="scroller">Scroller</string>
-    <string name="spinner">Spinner</string>
-    <string name="manage_items">Manage Items</string>
 
-    <string-array name="categories_array">
-        <item>Books</item>
-        <item>Movies</item>
-    </string-array>
+    <!-- For DocumentsActivity -->
+    <string name="upload_edit_delete">Upload, Edit, or Delete documents here</string>
+    <string name="upload_to_firebase">Upload change to Firebase</string>
 
+    <!-- For ActionActivity -->
+    <string name="choose_action">Please choose your next move:</string>
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 
+    <!-- For CategoryActivity -->
+    <string name="indicate_categories">Please indicate your data categories</string>
+    <string name="documents">Documents to pack</string>
+    <string name="contacts">Emergency contacts</string>
+    <string name="locations">Safe locations</string>
+    <string name="medications">Medications</string>
+    <string name="please_choose_your_next_move">Please choose your next move:</string>
+    <string name="add_file">Add File</string>
+    <string name="edit_file">Edit File</string>
+    <string name="delete_file">Delete File</string>
+    <string name="please_indicate_your_data_categories">Please indicate your data categories</string>
+    <string name="documents_to_pack">Documents to pack</string>
+    <string name="emergency_contacts">Emergency contacts</string>
+    <string name="safe_locations">Safe locations</string>
+    <string name="medications_">Medications</string>
+    <string name="upload_edit_or_delete_documents_here">Upload, Edit, or Delete documents here</string>
+    <string name="upload_change_to_firebase">Upload change to Firebase</string>
+    <string name="scroller">scroller</string>
+    <string name="spinner">spinner</string>
+    <string name="manage_items">manage_items</string>
+    <string name="recyclerview">recyclerview</string>
+    <string name="add_item">add_item</string>
+    <string name="delete_item">delete_item</string>
+    <string name="back">back</string>
 </resources>
