--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,10 @@
     <string name="add_item">add_item</string>
     <string name="delete_item">delete_item</string>
     <string name="back">back</string>
+    <string name="select_file_to_upload">Select File to Upload</string>
+    <string name="upload_file_to_firebase">Upload File to Firebase</string>
+    <string name="no_file_selected_yet">No file selected yet.</string>
+    <string name="select_file_to_upload_1">Select File to Upload</string>
+    <string name="upload_file_to_firebase_1">Upload File to Firebase</string>
+    <string name="no_file_selected_yet_1">No file selected yet.</string>
 </resources>
